Adjust for personal use

--- a/ansible/roles/base/templates/chrony.conf.j2
+++ b/ansible/roles/base/templates/chrony.conf.j2
@@ -1,7 +1,9 @@
-server {{ base_ntp_server }} iburst
+server time1.google.com iburst
+server time2.google.com iburst
+server time3.google.com iburst
+server time4.google.com iburst
 driftfile /var/lib/chrony/drift
 makestep 1.0 3
 rtcsync
 keyfile /etc/chrony.keys
-leapsectz right/UTC
 logdir /var/log/chrony
